# eight-minute-empire

./: Bidding.cpp  Bidding.h  BiddingDriver.cpp  CMakeLists.txt  Cards.cpp  Cards.h  CardsDriver.cpp  Map.cpp  Map.h  MapDriver.cpp  MapLoader.cpp  MapLoaderDrive  MapLoaderDriver  MapLoaderDriver.cpp  MapLoaderDriver.h  Player.cpp  Player.h  README.md  example.map  main  main.cpp  short_syntax.map
Bidding/: Bidding.cpp  Bidding.h  BiddingDriver.cpp  BiddingDriver.h
Card/: Cards.cpp  Cards.h  CardsDriver.cpp
Factory/: CardFactoryDriver.cpp  CardFactoryDriver.h  Cardsfactory.h  Gamecard.cpp
GameMainLoop/: GameMainLoop.cpp  GameMainLoop.h
GameScore/: GameScore.cpp  GameScore.h  GameScoreDriver.cpp  GameScoreDriver.h
GameState/: GameState.cpp  GameState.h  GameStateDriver.cpp  GameStateDriver.h
James'Strategy/Player/: Player.cpp  Player.h
James'Strategy/PlayerStrategies/: PlayerStrategies.cpp  PlayerStrategiesDriver.cpp  PlayerStrategiesDriver.h
James's Part 2/: example.map  main.cpp
James's Part 2/Bidding/: Bidding.cpp  Bidding.h
James's Part 2/Card/: CardDriver.h  Cards.cpp  Cards.h  CardsDriver.cpp
James's Part 2/GameMainLoop/: GameMainLoop.cpp
James's Part 2/GameScore/: GameScore.cpp  GameScore.h  GameScoreDriver.cpp
James's Part 2/GameState/: GameState.cpp  GameState.h  GameStateDriver.cpp
James's Part 2/Map/: Map.cpp  Map.h  MapDriver.h
James's Part 2/MapLoader/: MapLoader.cpp  MapLoader.h  MapLoaderDriver.cpp
James's Part 2/Player/: Player.cpp  Player.h  PlayerDriver.h
James's Part 2/StartUpPhase/: StartUpPhase.cpp  StartUpPhase.h  StartUpPhaseDriver.cpp  StartUpPhaseDriver.h
Map/: Map.cpp  Map.h  MapDriver.cpp  MapDriver.h
MapLoader/: MapLoader.cpp  MapLoader.h  MapLoaderDriver  MapLoaderDriver.cpp  MapLoaderDriver.h
Observer/: GameObservers.cpp  GameObservers.h
Player/: Player.cpp  Player.h  PlayerDriver.cpp
PlayerStrategies/: ComputerStrategy.cpp  ComputerStrategy.h  HumanStrategy.cpp  HumanStrategy.h  PlayerStrategies.cpp  PlayerStrategies.h  PlayerStrategiesDriver.cpp
StartUpPhase/: StartUpPhase.cpp  StartUpPhase.h  StartUpPhaseDriver.cpp  StartUpPhaseDriver.h
assets/: map1.map  map2.map  map3.map  version1.map
src/: main.cpp
src/GameObservers/: GameObservers.h
src/GameState/: GameState.cpp
src/Map/: MapDriver.cpp
